--- a/infrastructure/castai.yaml
+++ b/infrastructure/castai.yaml
@@ -17,3 +17,12 @@ spec:
       creationTimestamp: null
       name: cast-ai-api-key
       namespace: castai-agent
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: castai-agent
+  namespace: flux-system
+spec:
+  interval: 24h
+  url: https://castai.github.io/helm-charts
