--- a/infrastructure/castai.yaml
+++ b/infrastructure/castai.yaml
@@ -22,7 +22,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: castai-agent
-  namespace: flux-system
+  namespace: castai-agent
 spec:
   interval: 24h
   url: https://castai.github.io/helm-charts
@@ -31,7 +31,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: castai-agent
-  namespace: flux-system
+  namespace: castai-agent
 spec:
   chart:
     spec:
