--- a/infrastructure/castai.yaml
+++ b/infrastructure/castai.yaml
@@ -32,7 +32,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: castai-agent
-  namespace: castai-agent
+  namespace: flux-system
 spec:
   chart:
     spec:
