--- a/infrastructure/castai.yaml
+++ b/infrastructure/castai.yaml
@@ -23,7 +23,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: castai-agent
-  namespace: flux-sytsem
+  namespace: flux-system
 spec:
   interval: 24h
   url: https://castai.github.io/helm-charts
